fixes glitch not showing broken promises when loaded

--- a/src/css/seed.less
+++ b/src/css/seed.less
@@ -175,6 +175,7 @@ main.content {
       padding: 8px 10px;
       cursor: pointer;
       border-radius: 5px;
+      margin-right: 10px;
 
 
     @media @mobile {
